Fix alignment of percentages

--- a/public/assets/src/sass/common/pages/poll.sass
+++ b/public/assets/src/sass/common/pages/poll.sass
@@ -113,3 +113,5 @@ $media-spacing: 1rem
                 border: none
             &::-webkit-meter-optimum-value
                 background: $poll-result-background-color
+        .percentage
+            height: 100%
